plugins/kotlin/idea/tests/testData/gradle/highlighting/gradle8/gradleSampleAndroidApps/app/build.gradle.kts.highlighting
plugins {
    id("com.android.application") version "7.3.0"
}

repositories {
    google()
    mavenCentral()
}

android {
    <!HIGHLIGHTING("severity='WARNING'; descr='[DEPRECATION] 'compileSdkVersion(Int): Unit' is deprecated. Replaced by compileSdk'; textAttributesKey='DEPRECATED_ATTRIBUTES'")!>compileSdkVersion<!>(30)
    defaultConfig {
        applicationId = "org.gradle.samples"
        <!HIGHLIGHTING("severity='WARNING'; descr='[DEPRECATION] 'minSdkVersion(Int): Unit' is deprecated. Replaced by minSdk property'; textAttributesKey='DEPRECATED_ATTRIBUTES'")!>minSdkVersion<!>(16)
        <!HIGHLIGHTING("severity='WARNING'; descr='[DEPRECATION] 'targetSdkVersion(Int): Unit' is deprecated. Replaced by targetSdk property'; textAttributesKey='DEPRECATED_ATTRIBUTES'")!>targetSdkVersion<!>(30)
        versionCode = 1
        versionName = "1.0"
        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
    }
    buildTypes {
        getByName("release") {
            isMinifyEnabled = false
            proguardFiles(getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro")
        }
    }
}

dependencies {
    implementation("androidx.appcompat:appcompat:1.2.0")
    implementation("com.google.android.material:material:1.2.0")
    implementation("androidx.constraintlayout:constraintlayout:2.0.4")
    testImplementation("junit:junit:4.13.1")
    androidTestImplementation("androidx.test.ext:junit:1.1.2")
    androidTestImplementation("androidx.test.espresso:espresso-core:3.3.0")
}
